Renamed concept remote to engine

--- a/src/app/pages/overview-page/overview-page.component.html
+++ b/src/app/pages/overview-page/overview-page.component.html
@@ -34,7 +34,7 @@
       Below is a very basic example illustrating the application's functionality, try to click the play button to see it
       in action.
     </p>
-    <app-vizual-rx-player *ngIf="basicExampleRemote" [remote]="basicExampleRemote" [disableMouseWheel]="true"
+    <app-vizual-rx-player *ngIf="basicExampleEngine" [engine]="basicExampleEngine" [disableMouseWheel]="true"
                           [updateLayoutLightMode]="true" style="height: 210px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
@@ -61,7 +61,7 @@
     <p>
       Below is an example demonstrating the usage of the <span class="code">createValue</span> function.
     </p>
-    <app-vizual-rx-player *ngIf="createValueExampleRemote" [remote]="createValueExampleRemote"
+    <app-vizual-rx-player *ngIf="createValueExampleEngine" [engine]="createValueExampleEngine"
                           [disableMouseWheel]="true" [updateLayoutLightMode]="true"
                           style="height: 410px"></app-vizual-rx-player>
 
@@ -80,7 +80,7 @@
       In this example, we'll demonstrate the usage of the <span class="code">colorAt</span> and <span class="code">shapeAt</span>
       functions to dynamically assign colors and shapes to values based on their indices.
     </p>
-    <app-vizual-rx-player *ngIf="colorAndShapeAtExampleRemote" [remote]="colorAndShapeAtExampleRemote"
+    <app-vizual-rx-player *ngIf="colorAndShapeAtExampleEngine" [engine]="colorAndShapeAtExampleEngine"
                           [disableMouseWheel]="true" [updateLayoutLightMode]="true"
                           style="height: 380px"></app-vizual-rx-player>
     <h2>Visualization of Arrays</h2>
@@ -94,7 +94,7 @@
     <p>
       Below is an example demonstrating how the array representation appears in the diagram:
     </p>
-    <app-vizual-rx-player *ngIf="arrayExampleRemote" [remote]="arrayExampleRemote" [disableMouseWheel]="true"
+    <app-vizual-rx-player *ngIf="arrayExampleEngine" [engine]="arrayExampleEngine" [disableMouseWheel]="true"
                           [updateLayoutLightMode]="true" style="height: 350px"></app-vizual-rx-player>
     <h2>Completion, Errors, and Other Values</h2>
     <p>
@@ -114,7 +114,7 @@
       </li>
     </ul>
     <p>Below is an example showcasing the representation of the completion sign, an error, and an object value:</p>
-    <app-vizual-rx-player *ngIf="miscExampleRemote" [remote]="miscExampleRemote" [disableMouseWheel]="true"
+    <app-vizual-rx-player *ngIf="miscExampleEngine" [engine]="miscExampleEngine" [disableMouseWheel]="true"
                           [updateLayoutLightMode]="true" style="height: 320px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
@@ -144,7 +144,7 @@
       <li>Next, the <span class="code">map</span> operator is applied to transform each value into a triangle.</li>
       <li>Finally, the values are buffered by groups of 3 items using <span class="code">bufferCount</span>.</li>
     </ol>
-    <app-vizual-rx-player *ngIf="pipeExampleRemote" [remote]="pipeExampleRemote" [disableMouseWheel]="true"
+    <app-vizual-rx-player *ngIf="pipeExampleEngine" [engine]="pipeExampleEngine" [disableMouseWheel]="true"
                           [updateLayoutLightMode]="true" style="height: 460px"></app-vizual-rx-player>
   </mat-card-content>
 </mat-card>
