--- a/src/app/pages/playground-page/playground-page.component.html
+++ b/src/app/pages/playground-page/playground-page.component.html
@@ -17,5 +17,5 @@
     </ng-container>
   </div>
 </h1>
-<app-vizual-rx-player *ngIf="remote" class="player" [remote]="remote"
+<app-vizual-rx-player *ngIf="engine" class="player" [engine]="engine"
                       (codeChange)="code = $event"></app-vizual-rx-player>
