--- a/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
+++ b/src/app/vizual-rx-player/vizual-rx-controller/vizual-rx-controller.component.html
@@ -1,23 +1,23 @@
-<button matRipple (click)="remote.replay()" matTooltip="Replay (Ctrl + Enter)">
+<button matRipple (click)="engine.replay()" matTooltip="Replay (Ctrl + Enter)">
   <mat-icon>refresh</mat-icon>
 </button>
-<button *ngIf="remote.playing$ | async" (click)="remote.pause()" matTooltip="Pause (Ctrl + Space)">
+<button *ngIf="engine.playing$ | async" (click)="engine.pause()" matTooltip="Pause (Ctrl + Space)">
   <mat-icon>pause</mat-icon>
 </button>
-<button matRipple *ngIf="!(remote.playing$ | async)" (click)="remote.play()" matTooltip="Play (Ctrl + Space)">
+<button matRipple *ngIf="!(engine.playing$ | async)" (click)="engine.play()" matTooltip="Play (Ctrl + Space)">
   <mat-icon>play_arrow</mat-icon>
 </button>
-<button matRipple (click)="remote.stop()" matTooltip="Stop (Ctrl + K)" [disabled]="remote.stopped$ | async">
+<button matRipple (click)="engine.stop()" matTooltip="Stop (Ctrl + K)" [disabled]="engine.stopped$ | async">
   <mat-icon>stop</mat-icon>
 </button>
 <div class="grow-1"></div>
-<button matRipple (click)="switchRemote.next()" [matTooltip]="switchRemoteTooltip">
+<button matRipple (click)="switchEngine.next()" [matTooltip]="switchEngineTooltip">
   <mat-icon>{{ isVirtualTimeEngine ? 'schedule' : 'history_toggle_off' }}</mat-icon>
 </button>
 <div class="slider">
   <label>Time Speed</label>
   <mat-slider min="0" [max]="maxTimeFactor" step="0.1" [showTickMarks]="true" [discrete]="true">
-    <input matSliderThumb [(ngModel)]="timeFactor" [matTooltip]="remote.timeFactor.toString()">
+    <input matSliderThumb [(ngModel)]="timeFactor" [matTooltip]="engine.timeFactor.toString()">
   </mat-slider>
 </div>
 <div class="slider">
