Renamed player component

--- a/src/app/pages/doc-page/doc-page.component.html
+++ b/src/app/pages/doc-page/doc-page.component.html
@@ -16,5 +16,5 @@
       <ng-container *ngComponentOutlet="page.detailsComponent"/>
     </mat-card-content>
   </mat-card>
-  <app-vizual-rx-player *ngIf="engine" class="player" [engine]="engine"></app-vizual-rx-player>
+  <app-player *ngIf="engine" class="player" [engine]="engine"></app-player>
 </div>
