--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
   </button>
   <div>
     <span>VizualRx</span>
-    <span class="beta-label">Beta-virtual-time</span>
+    <span class="beta-label">Beta</span>
   </div>
   <a class="github-link" href="https://github.com/gezorodd" matTooltip="GitHub" target="_blank">
     <img src="assets/github-mark-white.svg" alt="github logo"/>
