--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="navbar" color="primary">
-  <button mat-icon-button (click)="toggleSidenav()">
+  <button mat-icon-button (click)="toggleSidenav()" aria-label="Menu">
     <mat-icon>menu</mat-icon>
   </button>
   <div>
