Replace the "play" shortcut from ctrl + space to ctrl + shift + space. The previous shortcut is used to trigger autocomplete.

--- a/src/app/player/player-controller/player-controller.component.html
+++ b/src/app/player/player-controller/player-controller.component.html
@@ -4,7 +4,7 @@
 <button *ngIf="engine.playing$ | async" (click)="engine.pause()" matTooltip="Pause (Ctrl + Space)" aria-label="Pause">
   <mat-icon>pause</mat-icon>
 </button>
-<button matRipple *ngIf="!(engine.playing$ | async)" (click)="engine.play()" matTooltip="Play (Ctrl + Space)"
+<button matRipple *ngIf="!(engine.playing$ | async)" (click)="engine.play()" matTooltip="Play (Ctrl + Shift + Space)"
         aria-label="Play">
   <mat-icon>play_arrow</mat-icon>
 </button>
