Updated github link to the project's repository URL instead of github profile.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <span>VizualRx</span>
     <span class="beta-label">Beta</span>
   </a>
-  <a class="github-link" href="https://github.com/gezorodd" matTooltip="GitHub" target="_blank">
+  <a class="github-link" href="https://github.com/gezorodd/vizual-rx" matTooltip="GitHub" target="_blank">
     <img src="assets/github-mark-white.svg" alt="github logo"/>
   </a>
 </mat-toolbar>
