--- a/src/app/pages/playground-page/playground-page.component.scss
+++ b/src/app/pages/playground-page/playground-page.component.scss
@@ -1,10 +1,18 @@
 @use "sass:map";
 @import "../../../theme";
+@import "../../ui/responsive/responsive";
 
 :host {
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+
+@media only screen and (max-height: $screen-height-breakpoint-compact-text) {
+  h1 {
+    margin-bottom: 0.5rem;
+  }
 }
 
 .player {
