--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -1,10 +1,49 @@
 @import "../../theme";
+@import "../ui/responsive/responsive";
+
+::ng-deep {
+  html {
+    overflow: hidden;
+  }
+}
 
 :host {
-  display: flex;
+  display: grid;
   border: $player-component-border;
   border-radius: $player-component-border-radius;
   overflow: auto;
+
+  grid-template-columns: 1fr 1.3fr;
+  grid-template-rows: auto 1fr;
+
+  .controller {
+    grid-row-start: 1;
+    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    border-bottom: $player-component-border;
+  }
+
+  .editor {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    overflow: hidden;
+    border-right: $player-component-border;
+
+    @media only screen and (min-width: $screen-width-breakpoint-editor-min-width) {
+      min-width: 500px;
+    }
+  }
+
+  .viewer-container, .error-panel {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    overflow: auto;
+  }
 
   .error-panel {
     height: 100%;
@@ -12,45 +51,25 @@
     padding: 0;
     border-radius: 0;
   }
-}
 
-.left-panel {
-  min-width: 600px;
-  flex: 600px 1 0;
-  display: flex;
-  flex-direction: column;
+  @media only screen and (max-width: $screen-width-breakpoint-player-mode) {
 
-  .controller {
-    flex-shrink: 0;
-    border-bottom: $player-component-border;
+    .controller {
+      grid-row-start: 1;
+      grid-row-end: 2;
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
+
+    .editor, .viewer-container, .error-panel {
+      grid-row-start: 2;
+      grid-row-end: 3;
+      grid-column-start: 1;
+      grid-column-end: 3;
+    }
   }
-
-  .content {
-    padding: 1em;
-  }
-
-  .editor {
-    flex-grow: 1;
-    border-right: $player-component-border;
-  }
-}
-
-.right-panel {
-  flex: 600px 3 1;
-  overflow: auto;
-}
-
-.error-panel {
-  height: 100%;
-  overflow: auto;
 }
 
 .error-panel-content {
   padding: 1em;
-}
-
-::ng-deep {
-  html {
-    overflow: hidden;
-  }
 }
